# rules_ruff

./: .bazelrc  .gitattributes  BUILD.bazel  CODEOWNERS  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE.bazel  config.toml  requirements.txt  requirements_lock.txt  ruff_config.toml
.bcr/: metadata.template.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml  release.yaml  release_prep.sh  tag.yaml
docs/: BUILD.bazel  rules.md
e2e/smoke/: .bazelrc  BUILD  MODULE.bazel  README.md  WORKSPACE.bazel  ruff_config.toml  test.py
ruff/: BUILD.bazel  defs.bzl  extensions.bzl  repositories.bzl  toolchain.bzl
ruff/private/: BUILD.bazel  platforms.bzl  resolved_toolchain.bzl  rules_ruff.bzl  toolchains_repo.bzl  versions.bzl
ruff/tests/: versions_test.bzl
tools/platform_generator/: BUILD.bazel  go.mod  platform_generator.go  platform_generator.py  platforms.bzl.jinja2
tools/version_importer/: BUILD.bazel  go.mod  version_importer.go  version_importer.py  versions.bzl.jinja2
