load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")

gazelle_binary(
    name = "gazelle_bin",
    languages = ["@bazel_skylib_gazelle_plugin//bzl"],
)

gazelle(
    name = "gazelle",
    gazelle = "gazelle_bin",
)

compile_pip_requirements(
    name = "requirements",
    extra_args = ["--allow-unsafe"],
    requirements_in = "requirements.in",
    requirements_txt = "requirements_lock.txt",
)

exports_files(
    [
        "config.toml",
    ],
)
