bazel_dep(name = "io_halaco_rules_ruff", version = "0.0.0", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.7.1", dev_dependency = True)
bazel_dep(name = "rules_python", version = "1.4.1", dev_dependency = True)

local_path_override(
    module_name = "io_halaco_rules_ruff",
    path = "../..",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = "3.12",
)
use_repo(python, "python_3_12")

ruff = use_extension("@io_halaco_rules_ruff//ruff:extensions.bzl", "ruff")
ruff.toolchain(ruff_version = "0.11.9")
use_repo(ruff, "ruff_toolchains")

register_toolchains("@ruff_toolchains//:all")
