bazel_dep(name = "io_halaco_rules_ruff", version = "0.0.0", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.7.1", dev_dependency = True)

local_path_override(
    module_name = "io_halaco_rules_ruff",
    path = "../..",
)

ruff = use_extension("@io_halaco_rules_ruff//ruff:extensions.bzl", "ruff")
ruff.toolchain(ruff_version = "0.11.9")
use_repo(ruff, "ruff_toolchains")

register_toolchains("@ruff_toolchains//:all")
