# Override http_archive for local testing
local_repository(
    name = "io_halaco_rules_ruff",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases

######################
# rules_ruff setup #
######################
# Fetches the rules_ruff dependencies.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
# Alternatively, you can skip calling this function, so long as you've
# already fetched all the dependencies.
load("@io_halaco_rules_ruff//ruff:repositories.bzl", "rules_ruff_dependencies")

rules_ruff_dependencies()
