load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    [
        "versions.bzl",
        "platforms.bzl",
    ],
)

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["//ruff:__subpackages__"],
    deps = [":platforms"],
)

bzl_library(
    name = "platforms",
    srcs = ["platforms.bzl"],
    visibility = ["//ruff:__subpackages__"],
)

bzl_library(
    name = "resolved_toolchain",
    srcs = ["resolved_toolchain.bzl"],
    visibility = ["//ruff:__subpackages__"],
)

bzl_library(
    name = "rules_ruff",
    srcs = ["rules_ruff.bzl"],
    visibility = ["//ruff:__subpackages__"],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//ruff:__subpackages__"],
)
