load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "version_impporter_lib",
    srcs = ["version_importer.go"],
    importpath = "halaco/rules_ruff/version_impporter",
    visibility = ["//visibility:private"],
    deps = ["@com_github_burntsushi_toml//:toml"],
)

go_binary(
    name = "version_importer",
    data = [
        "//:config.toml",
        "//ruff/private:versions.bzl",
    ],
    embed = [":version_impporter_lib"],
    visibility = ["//visibility:public"],
)
