load("@io_halaco_rules_ruff//ruff:defs.bzl", "ruff_check_fix", "ruff_check_test", "ruff_format_fix", "ruff_format_test")
load("@my_deps//:requirements.bzl", "requirement")
load("@rules_python//python:py_binary.bzl", "py_binary")

py_binary(
    name = "version_importer",
    srcs = [
        "version_importer.py",
    ],
    data = [
        ":versions.bzl.jinja2",
        "//:config.toml",
        "//ruff/private:versions.bzl",
    ],
    main = "version_importer.py",
    deps = [
        requirement("Jinja2"),
        requirement("Packaging"),
        requirement("requests"),
    ],
)

ruff_check_test(
    name = "ruff_check_test",
    size = "small",
    srcs = glob(["*.py"]),
    config = "//:ruff_config.toml",
)

ruff_format_test(
    name = "ruff_format_test",
    size = "small",
    srcs = glob(["*.py"]),
)

ruff_check_fix(
    name = "ruff_check_fix",
    srcs = glob(["*.py"]),
    config = "//:ruff_config.toml",
)

ruff_format_fix(
    name = "ruff_format_fix",
    srcs = glob(["*.py"]),
)
